fix: flex-columns optional wrap

--- a/partials/mixins/_positioning.sass
+++ b/partials/mixins/_positioning.sass
@@ -28,9 +28,11 @@
   justify-content: space-between
   align-items: $items
 
-=flex-columns($cols: 2, $gap: false, $reverse: false)
+=flex-columns($cols: 2, $gap: false, $reverse: false, $wrap: true)
   display: flex
-  flex-wrap: wrap
+
+  @if ($wrap)
+    flex-wrap: wrap
 
   @if ($reverse)
     flex-direction: row-reverse
